--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -15,4 +15,4 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: build docker image
         run: |
-          docker build -t hello_app:v1
+          docker build -t hello_app:v1 .
